<resources>
	<string name="app_name">ML Kit</string>
	<string name="action_camera">Camera</string>
	<string name="action_gallery">Gallery</string>
	<string name="btn_device">Device</string>
	<string name="btn_cloud">Cloud</string>
	<string name="confirm_storage">This app need to access files on your device.</string>
	<string name="confirm_camera">This app need to access camera and files on your device.</string>
	<string name="error_not_found">No text found</string>
	<string name="error_setup_model">Error while setting up the model</string>
	<string name="error_image_init">Image classifier has not been initialized; Skipped.</string>
	<string name="error_run_model">Error running model inference</string>
	<string name="error_read_label">Failed to read label list.</string>
	<string name="error_detect">Nothing detected</string>

	<string name="language_identification_hint">Fill in your text here…</string>
	<string name="language_identification_btn1">Detect Language</string>
	<string name="language_identification_btn2">Detect Languages</string>
	<string name="language_identification_result">Language: %s</string>
	<string name="language_identification_error">Can’t identify language.</string>

	<string name="smart_reply_btn">Suggest Me Replying Messages</string>
	<string name="smart_reply_error">The conversation\'s language isn\'t supported, so the result doesn\'t contain any suggestions.</string>

	<string name="translate_btn">Translate</string>
	<string name="translate_edt">ลองพิมพ์ประโยคภาษาไทยมาเลย</string>
	<string name="translate_loading">Translate button will be enabled after translation model is downloaded.\n\nPlease wait…</string>
</resources>
