<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin_default"
	tools:context=".LanguageActivity">

	<TextView
		android:id="@+id/txt"
		style="@style/TextAppearance.AppCompat.Medium"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		tools:text="@string/app_name"/>

	<EditText
		android:id="@+id/edt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/bottom"
		android:maxLines="10"
		android:scrollHorizontally="false"
		android:inputType="textMultiLine"
		android:hint="@string/language_identification_hint"
		android:importantForAutofill="no" />

	<LinearLayout
		android:id="@+id/bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btn1"
			style="?android:attr/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/language_identification_btn1"/>

		<Button
			android:id="@+id/btn2"
			style="?android:attr/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/language_identification_btn2"/>

	</LinearLayout>

</RelativeLayout>