<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin_default"
	tools:context=".SmartReplyActivity">

	<TextView
		android:id="@+id/txt"
		style="@style/TextAppearance.AppCompat.Medium"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:text="@string/translate_loading"/>

	<EditText
		android:id="@+id/edt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btn"
		android:maxLines="1"
		android:inputType="text"
		android:hint="@string/translate_edt"
		android:importantForAutofill="no" />

	<Button
		android:id="@+id/btn"
		android:layout_alignParentBottom="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/translate_btn"/>

</RelativeLayout>